--- a/파이썬 머신러닝 완벽 가이드/01 파이썬 기반의 머신러닝과 생태계 이해 (1) 넘파이.ipynb
+++ b/파이썬 머신러닝 완벽 가이드/01 파이썬 기반의 머신러닝과 생태계 이해 (1) 넘파이.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. 넘파이 ndarray 개요"
+    "### 1. 넘파이 ndarray 개요"
    ]
   },
   {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,12 +60,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. ndarray 데이터타입"
+    "### 2. ndarray 데이터타입"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -154,12 +154,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3. ndarray를 편리하게 생성하기 - arange, zeros, ones"
+    "### 3. ndarray를 편리하게 생성하기 - arange, zeros, ones"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -233,12 +233,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4. ndarray의 차원과 크기를 변경하기 - reshape()"
+    "### 4. ndarray의 차원과 크기를 변경하기 - reshape()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,491 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5. 넘파이의 ndarray의 데이터 세트 선택하기 : 인덱싱"
+    "### 5. 넘파이의 ndarray의 데이터 세트 선택하기 : 인덱싱"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.1 단일값 추출"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n",
+      "value: 3\n",
+      "<class 'numpy.int32'>\n",
+      "맨 뒤의 값 : 9 맨 뒤에서 두번째 값 : 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 1부터 9까지의 1차원 ndarray 생성\n",
+    "array1 = np.arange(start = 1, stop = 10)\n",
+    "print(array1)\n",
+    "\n",
+    "## index는 0부터 시작하므로 array1[2]는 3번째 index 위치의 데이터 값을 의미\n",
+    "value = array1[2]\n",
+    "print('value:',value)\n",
+    "print(type(value))\n",
+    "\n",
+    "## 원소로 음수를 넣으면 뒤에서부터 순서대로 단일값 추출가능\n",
+    "print('맨 뒤의 값 :',array1[-1], '맨 뒤에서 두번째 값 :', array1[-2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array1: [9 2 3 4 5 6 7 8 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 단일 인덱스를 이용하여 ndarray값 수정하기\n",
+    "array1[0] = 9\n",
+    "array1[8] = 0\n",
+    "print('array1:', array1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "(row=0, col=0) index가 가리키는 값 :  1\n",
+      "(row=0, col=1) index가 가리키는 값 :  2\n",
+      "(row=0, col=2) index가 가리키는 값 :  3\n",
+      "(row=1, col=0) index가 가리키는 값 :  4\n",
+      "(row=1, col=1) index가 가리키는 값 :  5\n",
+      "(row=1, col=2) index가 가리키는 값 :  6\n",
+      "(row=2, col=0) index가 가리키는 값 :  7\n",
+      "(row=2, col=1) index가 가리키는 값 :  8\n",
+      "(row=2, col=2) index가 가리키는 값 :  9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 다차원 ndarray에서 단일값 추출하기\n",
+    "\n",
+    "array1d = np.arange(start = 1, stop = 10)\n",
+    "array2d = array1d.reshape(3,3)\n",
+    "print(array2d)\n",
+    "\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        print(f\"(row={i}, col={j}) index가 가리키는 값 : \", array2d[i,j])\n",
+    "        \n",
+    "## ndarray에서는 행렬 대신 axis=0 (=row) / axis=1 (=col) 이라고 표현"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.2 슬라이싱"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 슬라이싱 : ':'기호를 사용하여 연속한 여러개의 데이터를 추출하는 방법\n",
+    "\n",
+    "array1 = np.arange(start=1, stop=10)\n",
+    "array3 = array1[:3]\n",
+    "print(array3)\n",
+    "print(type(array3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n",
+      "[4 5 6 7 8 9]\n",
+      "[1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 슬라이싱에서 ':'기호 앞뒤 원소를 비워두면 처음부터 or 끝까지를 의미\n",
+    "array4 = array1[:3]\n",
+    "print(array4)\n",
+    "\n",
+    "array5 = array1[3:]\n",
+    "print(array5)\n",
+    "\n",
+    "array6 = array1[:]\n",
+    "print(array6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array2d:\n",
+      " [[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "array2d[0:2,0:2] \n",
+      " [[1 2]\n",
+      " [4 5]]\n",
+      "array2d[1:3,0:3] \n",
+      " [[4 5 6]\n",
+      " [7 8 9]]\n",
+      "array2d[1:3,:] \n",
+      " [[4 5 6]\n",
+      " [7 8 9]]\n",
+      "array2d[:,:] \n",
+      " [[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "array2d[:2,1:] \n",
+      " [[2 3]\n",
+      " [5 6]]\n",
+      "array2d[:2,0] \n",
+      " [1 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 다차원 ndarray에서 슬라이싱하기\n",
+    "\n",
+    "array1d = np.arange(start=1, stop=10)\n",
+    "array2d = array1d.reshape(3,3)\n",
+    "print('array2d:\\n', array2d)\n",
+    "\n",
+    "print('array2d[0:2,0:2] \\n', array2d[0:2,0:2])\n",
+    "print('array2d[1:3,0:3] \\n', array2d[1:3,0:3])\n",
+    "print('array2d[1:3,:] \\n', array2d[1:3,:])\n",
+    "print('array2d[:,:] \\n', array2d[:,:])\n",
+    "print('array2d[:2,1:] \\n', array2d[:2,1:])\n",
+    "\n",
+    "## 한쪽에는 슬라이싱, 한쪽에는 단일값 인덱싱도 가능\n",
+    "print('array2d[:2,0] \\n', array2d[:2,0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.3 팬시 인덱싱"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array2d[[0,2],1] =>  [2 8]\n",
+      "array2d[[0,1],0:2] =>  [[1, 2], [4, 5]]\n",
+      "array2d[[0,1]] =>  [[1, 2, 3], [4, 5, 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 팬시 인덱싱 : 리스트를 이용하여 원하는 행렬을 지정하여 ndarray를 반환하는 방식\n",
+    "\n",
+    "array1d = np.arange(start=1, stop=10)\n",
+    "array2d = array1d.reshape(3,3) \n",
+    "\n",
+    "array3 = array2d[[0,2],1]\n",
+    "print('array2d[[0,2],1] => ', array3)\n",
+    "\n",
+    "array4 = array2d[[0,1],0:2]\n",
+    "print('array2d[[0,1],0:2] => ', array4.tolist())\n",
+    "\n",
+    "array5 = array2d[[0,1]]\n",
+    "print('array2d[[0,1]] => ', array5.tolist())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.4 불린 인덱싱"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array1d > 5 불린 인덱싱 결과 값 : [6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 불린 인덱싱 : ndarray에 조건을 걸거나 검색을 하여 원하는 정보만 추출하는 방식\n",
+    "\n",
+    "array1d = np.arange(start=1, stop=10)\n",
+    "\n",
+    "array3 = array1d[array1d > 5]\n",
+    "print('array1d > 5 불린 인덱싱 결과 값 :', array3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. 행렬의 정렬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "원본 행렬 :  [3 1 9 5]\n",
+      "np.sort() 호출 후 반환된 정렬 행렬 :  [1 3 5 9]\n",
+      "np.sort() 호출 후 원본 행렬 :  [3 1 9 5]\n",
+      "org_array.sort() 호출 후 반환된 행렬 :  None\n",
+      "org_array.sort() 호출 후 원본 행렬 :  [1 3 5 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "org_array = np.array([3,1,9,5])\n",
+    "print('원본 행렬 : ', org_array)\n",
+    "\n",
+    "## np.sort()로 정렬\n",
+    "sort_array1 = np.sort(org_array)\n",
+    "print('np.sort() 호출 후 반환된 정렬 행렬 : ', sort_array1)\n",
+    "print('np.sort() 호출 후 원본 행렬 : ', org_array)\n",
+    "## 원본 행렬은 그대로, 정렬된 행렬을 반환\n",
+    "\n",
+    "## ndarray.sort()로 정렬\n",
+    "sort_array2 = org_array.sort()\n",
+    "print('org_array.sort() 호출 후 반환된 행렬 : ', sort_array2)\n",
+    "print('org_array.sort() 호출 후 원본 행렬 : ', org_array)\n",
+    "## 원본행렬을 정렬하고 None을 반환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "내림차순으로 정렬 :  [9 5 3 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 내림차순으로 정렬 : [::-1]\n",
+    "sort_array1_desc = np.sort(org_array)[::-1]\n",
+    "print('내림차순으로 정렬 : ',sort_array1_desc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "로우 방향으로 정렬:\n",
+      " [[ 7  1]\n",
+      " [ 8 12]]\n",
+      "칼럼 방향으로 정렬:\n",
+      " [[ 8 12]\n",
+      " [ 1  7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 다차원 행렬일 경우 axis별로 정렬 가능\n",
+    "\n",
+    "array2d = np.array([[8,12],\n",
+    "                    [7,1 ]])\n",
+    "\n",
+    "sort_array2d_axis0 = np.sort(array2d, axis=0)\n",
+    "print('로우 방향으로 정렬:\\n', sort_array2d_axis0)\n",
+    "\n",
+    "sort_array2d_axis1 = np.sort(array2d, axis=1)\n",
+    "print('칼럼 방향으로 정렬:\\n', sort_array2d_axis1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "행렬 정렬 시 원본 행렬의 인덱스 :  [1 0 3 2]\n",
+      "행렬 내림차순 정렬 시 원본 행렬의 인덱스 :  [2 3 0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# np.argsort() : 정렬된 행렬의 원본 행렬 인덱스를 ndarray형태로 반환\n",
+    "\n",
+    "org_array = np.array([3,1,9,5])\n",
+    "sort_indices = np.argsort(org_array)\n",
+    "print(type(sort_indices))\n",
+    "print('행렬 정렬 시 원본 행렬의 인덱스 : ',sort_indices)\n",
+    "print('행렬 내림차순 정렬 시 원본 행렬의 인덱스 : ',sort_indices[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "성적 오름차순 정렬 시 score_array의 인덱스 :  [0 2 4 1 3]\n",
+      "성적 오름차순으로 name_array의 이름 출력 :  ['John' 'Sarah' 'Samuel' 'Mike' 'Kate']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 넘파이는 메타 데이터를 가지고 있지 않기 때문에 argsort()로 데이터 추출\n",
+    "\n",
+    "name_array = np.array(['John', 'Mike', 'Sarah', 'Kate', 'Samuel'])\n",
+    "score_array = np.array([78, 95, 84, 98, 88])\n",
+    "\n",
+    "## argsort() 메서드로 인덱스를 뽑아 팬시인덱싱 적용 \n",
+    "sort_indices_asc = np.argsort(score_array)\n",
+    "print('성적 오름차순 정렬 시 score_array의 인덱스 : ', sort_indices_asc)\n",
+    "print('성적 오름차순으로 name_array의 이름 출력 : ', name_array[sort_indices_asc])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. 선형대수 연산 - 행렬 내적과 전치 행렬 구하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "행렬 내적 결과 :\n",
+      " [[ 58  64]\n",
+      " [139 154]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 행렬 내적(행렬 곱)\n",
+    "\n",
+    "A = np.array([[1,2,3],\n",
+    "              [4,5,6]])\n",
+    "B = np.array([[7 ,8 ],\n",
+    "              [9 ,10],\n",
+    "              [11,12]])\n",
+    "\n",
+    "dot_product = np.dot(A,B)\n",
+    "print('행렬 내적 결과 :\\n', dot_product)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A의 전치 행렬 : \n",
+      " [[1 4 7]\n",
+      " [2 5 8]\n",
+      " [3 6 9]]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 't'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-46-a67b33c046c9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mtranspose_mat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mA\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'A의 전치 행렬 : \\n'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtranspose_mat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mA\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 't'"
+     ]
+    }
+   ],
+   "source": [
+    "# 전치 행렬\n",
+    "\n",
+    "A = np.array([[1,2,3],\n",
+    "              [4,5,6],\n",
+    "              [7,8,9]])\n",
+    "transpose_mat = np.transpose(A)\n",
+    "print('A의 전치 행렬 : \\n', transpose_mat)"
    ]
   },
   {
