--- a/파이썬 머신러닝 완벽 가이드/01 파이썬 기반의 머신러닝과 생태계 이해 (2) 판다스.ipynb
+++ b/파이썬 머신러닝 완벽 가이드/01 파이썬 기반의 머신러닝과 생태계 이해 (2) 판다스.ipynb
@@ -3312,7 +3312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3378,7 +3378,7 @@
        "3       74.0    302  13.675550"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3399,7 +3399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3533,7 +3533,7 @@
        "4  False   True     False  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3545,7 +3545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3686,7 +3686,7 @@
        "4      0            373450   8.0500  C000        S  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3699,7 +3699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3720,7 +3720,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3741,7 +3741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3762,7 +3762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3777,6 +3777,359 @@
     "# labmda로 함수를 간단하게 표현할 수 있음\n",
     "lambda_square = lambda x : x**2\n",
     "print('3의 제곱은 ', lambda_square(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lambda식으로 여러개의 값을 입력 인자로 사용할 경우 보통 map() 함수 활용\n",
+    "\n",
+    "a = [1,2,3]\n",
+    "squares = map(lambda x : x**2,a)\n",
+    "list(squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Name_len</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                Name  Name_len\n",
+       "0                            Braund, Mr. Owen Harris        23\n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...        51\n",
+       "2                             Heikkinen, Miss. Laina        22\n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)        44\n",
+       "4                           Allen, Mr. William Henry        24"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 판다스에서는 apply메서드를 이요하여 lambda식 사용\n",
+    "\n",
+    "titanic_df['Name_len'] = titanic_df['Name'].apply(lambda x : len(x))\n",
+    "titanic_df[['Name', 'Name_len']].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Child_Adult</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>29.699118</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>54.000000</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>Child</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Age Child_Adult\n",
+       "0  22.000000       Adult\n",
+       "1  38.000000       Adult\n",
+       "2  26.000000       Adult\n",
+       "3  35.000000       Adult\n",
+       "4  35.000000       Adult\n",
+       "5  29.699118       Adult\n",
+       "6  54.000000       Adult\n",
+       "7   2.000000       Child"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# if else절을 결합하여 복잡한 lambda 식 만들기\n",
+    "\n",
+    "## 콜론(:) 다음이 반환값\n",
+    "titanic_df['Child_Adult'] = titanic_df['Age'].apply(lambda x : 'Child' if x <= 15 else 'Adult')\n",
+    "titanic_df[['Age', 'Child_Adult']].head(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Adult      786\n",
+       "Child       83\n",
+       "Elderly     22\n",
+       "Name: Age_cat, dtype: int64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lambda는 elif를 지원하지 않으므로 3이상의 카테고리는 괄호를 사용하여 다시 if else를 적용해주어야함\n",
+    "titanic_df['Age_cat'] = titanic_df['Age'].apply(lambda x : 'Child' if x<=15 else ('Adult' if x <= 60 else 'Elderly'))\n",
+    "titanic_df['Age_cat'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Age_cat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>Student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>Young Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>Young Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>Young Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>29.699118</td>\n",
+       "      <td>Young Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>54.000000</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>Baby</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>Young Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>Teenager</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Age      Age_cat\n",
+       "0  22.000000      Student\n",
+       "1  38.000000        Adult\n",
+       "2  26.000000  Young Adult\n",
+       "3  35.000000  Young Adult\n",
+       "4  35.000000  Young Adult\n",
+       "5  29.699118  Young Adult\n",
+       "6  54.000000        Adult\n",
+       "7   2.000000         Baby\n",
+       "8  27.000000  Young Adult\n",
+       "9  14.000000     Teenager"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 조건이 많다면 lambda식보단 별도의 함수를 만드는 것이 가독성이 높음\n",
+    "\n",
+    "def get_category(age):\n",
+    "    cat = ''\n",
+    "    if age <= 5: cat = 'Baby'\n",
+    "    elif age <= 12: cat = 'Child' \n",
+    "    elif age <= 18: cat = 'Teenager'\n",
+    "    elif age <= 25: cat = 'Student'\n",
+    "    elif age <= 35: cat = 'Young Adult'\n",
+    "    elif age <= 60: cat = 'Adult'\n",
+    "    else : cat = 'Eldely'\n",
+    "        \n",
+    "    return cat\n",
+    "\n",
+    "titanic_df['Age_cat'] = titanic_df['Age'].apply(lambda x : get_category(x))\n",
+    "titanic_df[['Age', 'Age_cat']].head(10)"
    ]
   },
   {
