--- a/파이썬 머신러닝 완벽 가이드/04 분류 (2) 결정 트리.ipynb
+++ b/파이썬 머신러닝 완벽 가이드/04 분류 (2) 결정 트리.ipynb
@@ -1108,6 +1108,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__feature_importance_ 의 동작원리__  \n",
+    "> 불순도 기반. 즉 어떤 피처가 __불순도를 가장 많이 감소__시키느냐에 따라 피처의 중요도를 결정  \n",
+    "랜덤 포레스트의 경우는 모든 트리들의 불순도 감소값을 평균 낸 것\n",
+    "\n",
+    "__feature_importance_ 의 한계__  \n",
+    "> 1) 연속형 변수 혹은 카테고리 개수가 매우 많은(high cardinality) 변수들의 중요도를 부풀릴 가능성이 높음.  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;-> 기본적으로 신뢰할 만 하지만 __Permutation Feature Importance__와 같은 다른 방법을 혼합해서 사용하는 것을 추천__  \n",
+    "2) train 데이터셋으로부터 얻은 통계량을 기반으로 하기 때문에 __과적합__ 으로부터 자유롭지 못함"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
