--- a/파이썬 머신러닝 완벽 가이드/04 분류/04 분류 (6) XGBoost, LightGBM.ipynb
+++ b/파이썬 머신러닝 완벽 가이드/04 분류/04 분류 (6) XGBoost, LightGBM.ipynb
@@ -26,18 +26,20 @@
     "다수의 기능이 동일하지만 사이킷런에서 사용되는 속성들이 추가되어 보다 편하게 사용가능 ex) fit(), prdict(), GridSearchCV등\n",
     "\n",
     "> __과적합__ 문제를 해결하기 위한 주요 파라미터  \n",
-    "- __learning_rate__ : 부스팅 스템을 반복할 때 마다 업데이트 되는 학습률 값. 디폴트는 0.1이며 낮을수록 예측성능을 높일 수 있음. 단 수행시간이 반비례하여 증가.(일반적으로 0.1 ~ 0.2를 선호)\n",
-    "- __max_depth__ : 트리의 깊이. 디폴트는 6 (일반적으로 3~10 사이의 값을 선호)\n",
-    "- __min_child_weight__ : 추가적으로 가지를 나눌 지 결정하기 위해 필요한 데이터들의 weight총합. 클수록 분할을 자제함\n",
-    "- __gamma__ : 트리에서 리프노드를 추가적으로 나눌지를 결정하는 최소 손실 감소 값.\n",
-    "- 이외에도 subsample, colsample_bytree 등 사용가능\n",
+    ">- __learning_rate__ : 부스팅 스템을 반복할 때 마다 업데이트 되는 학습률 값. 디폴트는 0.1이며 낮을수록 예측성능을 높일 수 있음. 단 수행시간이 반비례하여 증가.(일반적으로 0.1 ~ 0.2를 선호)\n",
+    ">- __max_depth__ : 트리의 깊이. 디폴트는 6 (일반적으로 3~10 사이의 값을 선호)\n",
+    ">- __min_child_weight__ : 추가적으로 가지를 나눌 지 결정하기 위해 필요한 데이터들의 weight총합. 클수록 분할을 자제함\n",
+    ">- __gamma__ : 트리에서 리프노드를 추가적으로 나눌지를 결정하는 최소 손실 감소 값.\n",
+    ">- 이외에도 subsample, colsample_bytree 등 사용가능\n",
     "\n",
     "> __조기중단__ : 앞선 모델들이 n_estimators를 설정하면 그 값을 채울때까지 알고리즘을 계속해서 수행. 그러나 xgboost에서는 조기 중단값을 설정하면 알고리즘을 수행할 때 지정 횟수를 반복하는 동안 예측 성능이 향상되지 않을 시 n_estimators 값에 상관없이 중단.\n",
-    "- 파라미터는 __'early_stoppings'__ 를 사용. 값이 작을수록 과적합 억제를 가져오지만 너무 적으면 예측성능을 개선할 기회를 놓칠 수 있음\n",
-    "- 조기중단 파라미터 설정 시 반드시 eval_set과 eval_metric이 함꼐 설정 되어야 함  \n",
+    ">- 파라미터는 __'early_stoppings'__ 를 사용. 값이 작을수록 과적합 억제를 가져오지만 너무 적으면 예측성능을 개선할 기회를 놓칠 수 있음\n",
+    ">- 조기중단 파라미터 설정 시 반드시 eval_set과 eval_metric이 함꼐 설정 되어야 함  \n",
     "__eval_set__ : 성능 평가를 수행할 평가용 데이터 세트를 설정. 이때 기존 학습 시 사용한 테스트 데이터세트 말고 별도의 테스트 데이터 세트와 X_test세트를 설정할것 ex) wlist = [X_test, z_test]  \n",
     "__eval_metric__ : 평가 세트에 적용할 성능 평가 방법. 일반적으로 error나 logloss를 적용\n",
-    "- 사이킷런 래퍼 XGBoost에서는 fit() 함수에 조기중단 파라미터 적용"
+    ">- 사이킷런 래퍼 XGBoost에서는 fit() 함수에 조기중단 파라미터 적용\n",
+    "\n",
+    "> 만약 데이터 셋이 극도로 불균형한 레이블 값을 가지고 있다면 __boost_from_average = False__ 를 적용할 것"
    ]
   },
   {
@@ -626,13 +628,7 @@
       "[226]\tvalidation_0-logloss:0.085927\n",
       "[227]\tvalidation_0-logloss:0.085954\n",
       "[228]\tvalidation_0-logloss:0.085874\n",
-      "[229]\tvalidation_0-logloss:0.086057\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[229]\tvalidation_0-logloss:0.086057\n",
       "[230]\tvalidation_0-logloss:0.086002\n",
       "[231]\tvalidation_0-logloss:0.085922\n",
       "[232]\tvalidation_0-logloss:0.086102\n",
